Add database readiness endpoint (#14)
